--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
